Implement Angular LTE

--- a/src/app/modules/main/header/user/user.component.html
+++ b/src/app/modules/main/header/user/user.component.html
@@ -2,7 +2,7 @@
     <div slot="button">
         <a class="nav-link">
             <pf-image
-                [src]="user.picture"
+                [src]="user.imageUrl"
                 fallback-src="assets/img/default-profile.png"
                 class="user-image-small"
                 width="25"
@@ -15,7 +15,7 @@
     <div slot="menu">
         <li class="user-header bg-primary">
             <pf-image
-                [src]="user.picture"
+                [src]="user.imageUrl"
                 fallback-src="assets/img/default-profile.png"
                 class="user-image-big"
                 alt="User Image"
@@ -28,7 +28,7 @@
                 <span>{{ user.email }}</span>
                 <small>
                     <span class="mr-2">Member since</span>
-                    <span>{{ formatDate(user.createdAt) }}</span>
+                    <span>{{ formatDate(user.createdUtc) }}</span>
                 </small>
             </p>
         </li>
