--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -18,7 +18,7 @@
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
             <pf-image
-                [src]="user.picture"
+                [src]="user.imageUrl"
                 fallback-src="assets/img/default-profile.png"
                 class="img-circle"
                 alt="User Image"
@@ -29,7 +29,8 @@
         </div>
         <div class="info">
             <a [routerLink]="['/profile']" class="d-block">
-                {{ user.email }}
+                {{ user.fullName | slice:0:20}}
+                {{ (user.fullName.length > 20) ? '...' : ''}}
             </a>
         </div>
     </div>
