--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-7">
                     <div class="icheck-primary">
-                        <input type="checkbox" id="remember" />
+                        <input type="checkbox" id="remember" formControlName="remember" />
                         <label for="remember"> Remember Me </label>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
             </div>
         </form>
 
-        <div class="social-auth-links text-center mb-3">
+        <!-- <div class="social-auth-links text-center mb-3">
             <pf-button
                 class="mb-2"
                 [block]="true"
@@ -75,7 +75,7 @@
                 <i class="fab fa-google mr-2"></i>
                 Sign in using Google+
             </pf-button>
-        </div>
+        </div> -->
 
         <p class="mb-1">
             <a [routerLink]="['/forgot-password']">I forgot my password</a>
