--- a/src/app/modules/main/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/modules/main/breadcrumbs/breadcrumbs.component.html
@@ -9,7 +9,7 @@
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <!-- mr-3 -->
-            <li class="breadcrumb-item"><a href="#">Home</a></li>            
+            <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a></li>            
             <li class="breadcrumb-item active">{{title}}</li>
           </ol>
         </div><!-- /.col -->
