--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -9,7 +9,7 @@
         rounded
         style="opacity: 0.8"
     ></pf-image>
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">SICOTYC</span>
 </a>
 
 <!-- Sidebar -->
