--- a/src/app/modules/main/header/header.component.html
+++ b/src/app/modules/main/header/header.component.html
@@ -10,6 +10,12 @@
     <li class="nav-item d-none d-sm-inline-block">
         <a [routerLink]="['/blank']" class="nav-link">Contact</a>
     </li>
+    <li class="nav-item d-none d-sm-inline-block">
+        <a routerLink="/calculo-tarifas/lima-callao" class="nav-link">Tarifas Lima y Callao</a>
+    </li>
+    <li class="nav-item d-none d-sm-inline-block">
+    <a routerLink="/calculo-tarifas/provincia" class="nav-link">Tarifas Provincia</a>
+    </li>
 </ul>
 
 <form class="form-inline ml-3" [formGroup]="searchForm" *ngIf="false">
