Add changes to SICOTYC

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -1,104 +1,305 @@
-<div class="card card-outline card-primary">
-    <div class="card-header text-center">
-        <a [routerLink]="['/']" class="h1"><b>Admin</b>LTE</a>
-    </div>
-    <div class="card-body">
-        <p class="login-box-msg">Register a new membership</p>
+<div class="hold-transition register-page">
+    <div class="register-box2">
+        <div class="card card-outline card-primary">
+            <div class="card-header text-center">
+                <a class="h1"><b>SICOTYC</b></a>
+            </div>
+            <div class="card-body">
+                <form
+                    id="registerForm"
+                    autocomplete="off"
+                    [formGroup]="registerForm"
+                    (ngSubmit)="createUser()"
+                >
+                    <p class="login-box-msg h5">Datos del Usuario</p>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Nombres"
+                                    formControlName="firstName"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-user"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Apellidos"
+                                    formControlName="lastName"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-user"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Nombre de Usuario"
+                                    formControlName="userName"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-user"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Celular"
+                                    formControlName="mobile"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-mobile"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="email"
+                                    class="form-control"
+                                    placeholder="Correo"
+                                    formControlName="email"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-envelope"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="password"
+                                    class="form-control"
+                                    placeholder="Contraseña"
+                                    formControlName="password"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-lock"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="password"
+                                    class="form-control"
+                                    placeholder="Repetir contraseña"
+                                    formControlName="password2"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-lock"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="login-box-msg h5">Datos de la Empresa</p>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="RUC"
+                                    formControlName="companyRuc"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-building"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Nombre comercial"
+                                    formControlName="companyComercialName"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-building"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="email"
+                                    class="form-control"
+                                    placeholder="Correo de la empresa"
+                                    formControlName="companyEmail"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-envelope"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Telefono de la empresa"
+                                    formControlName="companyPhone"
+                                />
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-mobile"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="input-group mb-3">
+                                <select
+                                    class="form-control"
+                                    name="companyType"
+                                    id="companyType"
+                                    formControlName="companyType"
+                                >
+                                    <option
+                                        *ngFor="let item of lcItems"
+                                        value="{{ item.lcValue }}"
+                                    >
+                                        {{ item.lcName }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-danger">
+                            <p *ngIf="fieldNoValidate('firstName')">
+                                El nombre es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('lastName')">
+                                El apellido es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('userName')">
+                                El nombre de usuario es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('email')">
+                                El email es obligatorio y tiene que ser valido
+                            </p>
+                            <p *ngIf="fieldNoValidate('mobile')">
+                                El numero de celular del usuario es obligatorio
+                                y tiene que ser valido
+                            </p>
+                            <!-- <p *ngIf="fieldNoValidate('password')">La contraseña es obligatoria</p>
+                    <p *ngIf="fieldNoValidate('password2')">La confirmacion de la contraseña es obligatoria</p> -->
+                            <p *ngIf="passwordsNotValid()">
+                                Las contraseñas deben de ser iguales
+                            </p>
+                            <p *ngIf="fieldNoValidate('companyRuc')">
+                                El Ruc es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('companyComercialName')">
+                                El nombre comercial es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('companyEmail')">
+                                El correo de la empresa es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('companyPhone')">
+                                El telefono de la empresa es obligatorio
+                            </p>
+                            <p *ngIf="fieldNoValidate('companyType')">
+                                El tipo de empresa es obligatorio
+                            </p>
+                            <p *ngIf="accepTerms()">
+                                Debe de aceptar los terminos y condiciones
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="icheck-primary">
+                                <input
+                                    type="checkbox"
+                                    id="agreeTerms"
+                                    name="terms"
+                                    formControlName="terms"
+                                />
+                                <label for="agreeTerms" class="h6">
+                                    Estoy de acuerdo con los
+                                    <a href="#">terminos</a>
+                                </label>
+                            </div>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-4">
+                            <button
+                                ng-disabled="false"
+                                type="submit"
+                                class="btn btn-primary btn-block"
+                            >
+                                Registrar
+                            </button>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                </form>
 
-        <form [formGroup]="registerForm" (ngSubmit)="registerByAuth()">
-            <div class="input-group mb-3">
-                <input
-                    formControlName="email"
-                    type="email"
-                    class="form-control"
-                    placeholder="Email"
-                />
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="fas fa-envelope"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="input-group mb-3">
-                <input
-                    formControlName="password"
-                    type="password"
-                    class="form-control"
-                    placeholder="Password"
-                />
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="fas fa-lock"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="input-group mb-3">
-                <input
-                    formControlName="retypePassword"
-                    type="password"
-                    class="form-control"
-                    placeholder="Retype password"
-                />
-                <div class="input-group-append">
-                    <div class="input-group-text">
-                        <span class="fas fa-lock"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-7">
-                    <div class="icheck-primary">
-                        <input
-                            type="checkbox"
-                            id="agreeTerms"
-                            name="terms"
-                            value="agree"
-                        />
-                        <label for="agreeTerms">
-                            I agree to the <a href="#">terms</a>
-                        </label>
-                    </div>
-                </div>
-                <!-- /.col -->
-                <div class="col-5">
-                    <pf-button
-                        [type]="'submit'"
-                        [block]="true"
-                        [loading]="isAuthLoading"
-                        [disabled]="isFacebookLoading || isGoogleLoading"
-                    >
-                        Register
-                    </pf-button>
-                </div>
-                <!-- /.col -->
-            </div>
-        </form>
-
-        <div class="social-auth-links text-center">
-            <pf-button
-                class="mb-2"
-                [block]="true"
-                [loading]="isFacebookLoading"
-                [disabled]="isAuthLoading || isGoogleLoading"
-                (click)="registerByFacebook()"
-            >
+                <!-- <div class="social-auth-links text-center">
+              <a href="#" class="btn btn-block btn-primary">
                 <i class="fab fa-facebook mr-2"></i>
                 Sign up using Facebook
-            </pf-button>
-            <pf-button
-                [block]="true"
-                [loading]="isGoogleLoading"
-                [disabled]="isAuthLoading || isFacebookLoading"
-                (click)="registerByGoogle()"
-                theme="danger"
-            >
-                <i class="fab fa-google mr-2"></i>
+              </a>
+              <a href="#" class="btn btn-block btn-danger">
+                <i class="fab fa-google-plus mr-2"></i>
                 Sign up using Google+
-            </pf-button>
+              </a>
+            </div> -->
+                <a routerLink="/sign-in" class="text-left"
+                    >Ya tienes una cuenta ... inicia sesion</a
+                >
+            </div>
+            <!-- /.form-box -->
         </div>
-
-        <a [routerLink]="['/login']" class="text-center">
-            I already have a membership</a
-        >
+        <!-- /.card -->
     </div>
+    <!-- /.register-box -->
 </div>
