--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="card card-outline card-primary">
     <div class="card-header text-center">
-        <a [routerLink]="['/']" class="h1"><b>Admin</b>LTE</a>
+        <a [routerLink]="['/']" class="h1"><b>SICOTYC</b></a>
     </div>
     <div class="card-body">
-        <p class="login-box-msg">Sign in to start your session</p>
+        <p class="login-box-msg">Login de usuario</p>
 
         <form [formGroup]="loginForm" (ngSubmit)="loginByAuth()">
             <div class="input-group mb-3">
@@ -35,8 +35,12 @@
             <div class="row">
                 <div class="col-7">
                     <div class="icheck-primary">
-                        <input type="checkbox" id="remember" formControlName="remember" />
-                        <label for="remember"> Remember Me </label>
+                        <input
+                            type="checkbox"
+                            id="remember"
+                            formControlName="remember"
+                        />
+                        <label for="remember"> Recuerdame </label>
                     </div>
                 </div>
                 <!-- /.col -->
@@ -47,7 +51,7 @@
                         [loading]="isAuthLoading"
                         [disabled]="isFacebookLoading || isGoogleLoading"
                     >
-                        Sign In
+                        Iniciar sesion
                     </pf-button>
                 </div>
                 <!-- /.col -->
@@ -78,11 +82,11 @@
         </div> -->
 
         <p class="mb-1">
-            <a [routerLink]="['/forgot-password']">I forgot my password</a>
+            <a [routerLink]="['/forgot-password']">Olvide mi contraseña</a>
         </p>
         <p class="mb-0">
             <a [routerLink]="['/register']" class="text-center">
-                Register a new membership
+                Registrar un nuevo usuario
             </a>
         </p>
     </div>
