--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -49,7 +49,7 @@
                         [type]="'submit'"
                         [block]="true"
                         [loading]="isAuthLoading"
-                        [disabled]="isFacebookLoading || isGoogleLoading"
+                        [disabled]="this.loginForm.pristine"
                     >
                         Iniciar sesion
                     </pf-button>
