--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 @import '~admin-lte/plugins/fontawesome-free/css/fontawesome.min.css';
 @import '~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css';
 @import '~admin-lte/dist/css/adminlte.min.css';
+@import '~angular2-multiselect-dropdown/themes/default.theme.css';
 
 @import 'ngx-toastr/toastr';
 
