implement modal cahnge image

--- a/src/app/pages/maintenances/users/users.component.html
+++ b/src/app/pages/maintenances/users/users.component.html
@@ -51,7 +51,8 @@
                                     <img
                                         [src]="user.imageUrl"
                                         alt="Avatar de Usuario"
-                                        class="avatar"
+                                        class="avatar cursor-pointer"
+                                        (click)="openModal(user)"
                                     />
                                 </td>
                                 <td>{{ user.firstName }}</td>
