--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -9,9 +9,10 @@
             <!-- Aca definimos nuestro contenido -->
             <router-outlet></router-outlet>
         </div>
-    </section>    
+    </section>
 </div>
 
 <app-footer></app-footer>
 <app-control-sidebar></app-control-sidebar>
 <div id="sidebar-overlay" (click)="onToggleMenuSidebar()"></div>
+<app-modal-imagen></app-modal-imagen>
